# tinyllm

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
providers/: base.py  google.py  groq.py
routers/home/: __init__.py  index.py
routers/llm/: __init__.py  google.py  groq.py
settings/: base.py
