[project]
name = "tinyllm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "yuchou87", email = "yuchou87@gmail.com"},
]
dependencies = [
    "langchain>=0.2.3",
    "langchain-core>=0.2.5",
    "langchain-community>=0.2.4",
    "langserve>=0.2.2",
    "pydantic==1.10.15",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.30.1",
    "fastapi>=0.111.0",
    "langchain-groq>=0.1.5",
    "sse-starlette>=2.1.0",
    "langchain-google-genai>=1.0.6",
    "langchain-google-vertexai>=1.0.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
